documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

P13W32API VOID __stdcall P13_CmdCurrWr(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_CmdInit(USHORT opcode,LPUSHORT block);

P13W32API SCHNDX __stdcall P13_CmdInsert(LPUSHORT block,HCARD handleval);

P13W32API USHORT __stdcall P13_CmdMaxRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdMaxWr(USHORT count,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CmdShotWr(BOOL value,SCHNDX index,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);

P13W32API VOID __stdcall P13_CmdStackClr(HCARD handleval);

P13W32API USHORT __stdcall P13_CmdStartRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdStartWr(USHORT addrval,HCARD handleval);

P13W32API INT __stdcall P13_CmdTotalRd(HCARD handleval);

P13W32API VOID __stdcall P13_CmdTotalWr(INT countval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommCall(ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommCheck(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommDisable(USHORT command,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommEnable(HCARD handleval);

P13W32API ULONG __stdcall P13_CommRdL(ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

P13W32API USHORT __stdcall P13_CommRdW(ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

P13W32API VOID __stdcall P13_CommWrL(ULONG value,ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

P13W32API VOID __stdcall P13_CommWrW(USHORT value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_DARClr(USHORT maskval,USHORT addrval,HCARD handleval);

P13W32API BOOL __stdcall P13_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_DARRdL(USHORT addrval,HCARD handleval);

P13W32API USHORT __stdcall P13_DARRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_DARWrL(ULONG value,USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_DARWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_DescAddr(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ULONG __stdcall P13_DescAlloc(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DescConfig(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API USHORT __stdcall P13_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API VOID __stdcall P13_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API MSGADDR __stdcall P13_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ULONG __stdcall P13_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ULONG __stdcall P13_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

P13W32API ULONG __stdcall P13_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

P13W32API ULONG __stdcall P13_Div(ULONG diva,ULONG divb);

P13W32API INT __stdcall P13_DllUsageCount(VOID);

P13W32API USHORT __stdcall P13_DspBioRd(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DspIntfClear(HCARD handleval);

P13W32API BOOL __stdcall P13_DspIntfRead(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DspIntmClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DspIntmSet(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DspXfClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_DspXfSet(HCARD handleval);

P13W32API BOOL __stdcall P13_ErrorIsTaggedBC(MSGADDR msgaddr,HCARD handleval);

P13W32API BOOL __stdcall P13_ErrorIsTaggedRT(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorResponse(USHORT responseval,HCARD handleval);

P13W32API VOID __stdcall P13_ErrorSync(BOOL value,HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorTimeout(USHORT timeoutval,HCARD handleval);

P13W32API BOOL __stdcall P13_ExtDinRd(HCARD handleval);

P13W32API VOID __stdcall P13_ExtDinWr(BOOL dinval,HCARD handleval);

P13W32API BOOL __stdcall P13_ExtDoutRd(HCARD handleval);

P13W32API VOID __stdcall P13_ExtDoutWr(BOOL doutval,HCARD handleval);

P13W32API VOID __stdcall P13_FileClose(LPVOID handle);

P13W32API BOOL __stdcall P13_FileErr(VOID);

P13W32API VOID __stdcall P13_FileErrClr(VOID);

P13W32API VOID __stdcall P13_FileErrSet(VOID);

P13W32API LPVOID __stdcall P13_FileOpenRead(LPCSTR filename);

P13W32API LPVOID __stdcall P13_FileOpenWrite(LPCSTR filename);

P13W32API BOOL __stdcall P13_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

P13W32API BOOL __stdcall P13_FileSeek(LPVOID handle,ULONG offset);

P13W32API ULONG __stdcall P13_FileTell(LPVOID handle);

P13W32API BOOL __stdcall P13_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

P13W32API USHORT __stdcall P13_GetHigh(ULONG val);

P13W32API USHORT __stdcall P13_GetLow(ULONG val);

P13W32API USHORT __stdcall P13_GlobalRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_HandleDel(HCARD handleval);

P13W32API ERRVAL __stdcall P13_HandleGet(LPULONG memval,LPULONG sizval,LPULONG ioval,LPUSHORT irqval,LPUSHORT drqval,HCARD handleval);

P13W32API HCARD __stdcall P13_HandleGetIo(USHORT ioval);

P13W32API HCARD __stdcall P13_HandleGetMem(ULONG memval);

P13W32API HCARD __stdcall P13_HandleIns(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P13W32API BOOL __stdcall P13_HandleOkay(HCARD handleval);