documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32NET.VB

    Public Declare Sub P13_CmdCurrWr Lib "P13W32.DLL" Alias "_P13_CmdCurrWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_CmdInit Lib "P13W32.DLL" Alias "_P13_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function P13_CmdInsert Lib "P13W32.DLL" Alias "_P13_CmdInsert@8" (ByRef block As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CmdMaxRd Lib "P13W32.DLL" Alias "_P13_CmdMaxRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_CmdMaxWr Lib "P13W32.DLL" Alias "_P13_CmdMaxWr@8" (ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_CmdRd Lib "P13W32.DLL" Alias "_P13_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CmdShotWr Lib "P13W32.DLL" Alias "_P13_CmdShotWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CmdSkipWr Lib "P13W32.DLL" Alias "_P13_CmdSkipWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CmdStackClr Lib "P13W32.DLL" Alias "_P13_CmdStackClr@4" (ByVal handleval As UInt32)
    Public Declare Function P13_CmdStartRd Lib "P13W32.DLL" Alias "_P13_CmdStartRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_CmdStartWr Lib "P13W32.DLL" Alias "_P13_CmdStartWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_CmdTotalRd Lib "P13W32.DLL" Alias "_P13_CmdTotalRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CmdTotalWr Lib "P13W32.DLL" Alias "_P13_CmdTotalWr@8" (ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_CmdWr Lib "P13W32.DLL" Alias "_P13_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommCall Lib "P13W32.DLL" Alias "_P13_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommCheck Lib "P13W32.DLL" Alias "_P13_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommDisable Lib "P13W32.DLL" Alias "_P13_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommEnable Lib "P13W32.DLL" Alias "_P13_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommRdL Lib "P13W32.DLL" Alias "_P13_CommRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_CommRdsW Lib "P13W32.DLL" Alias "_P13_CommRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CommRdW Lib "P13W32.DLL" Alias "_P13_CommRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_CommRun Lib "P13W32.DLL" Alias "_P13_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CommWrL Lib "P13W32.DLL" Alias "_P13_CommWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_CommWrsW Lib "P13W32.DLL" Alias "_P13_CommWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_CommWrW Lib "P13W32.DLL" Alias "_P13_CommWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_DARClr Lib "P13W32.DLL" Alias "_P13_DARClr@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_DARGet Lib "P13W32.DLL" Alias "_P13_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DARRdL Lib "P13W32.DLL" Alias "_P13_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DARRdW Lib "P13W32.DLL" Alias "_P13_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_DARSet Lib "P13W32.DLL" Alias "_P13_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_DARWrL Lib "P13W32.DLL" Alias "_P13_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_DARWrW Lib "P13W32.DLL" Alias "_P13_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_DescAddr Lib "P13W32.DLL" Alias "_P13_DescAddr@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DescAlloc Lib "P13W32.DLL" Alias "_P13_DescAlloc@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DescConfig Lib "P13W32.DLL" Alias "_P13_DescConfig@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DescOptRd Lib "P13W32.DLL" Alias "_P13_DescOptRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_DescOptWr Lib "P13W32.DLL" Alias "_P13_DescOptWr@24" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_DescPtrRd Lib "P13W32.DLL" Alias "_P13_DescPtrRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DescPtrWr Lib "P13W32.DLL" Alias "_P13_DescPtrWr@24" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DescRd Lib "P13W32.DLL" Alias "_P13_DescRd@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_DescWr Lib "P13W32.DLL" Alias "_P13_DescWr@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_Div Lib "P13W32.DLL" Alias "_P13_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function P13_DllUsageCount Lib "P13W32.DLL" Alias "_P13_DllUsageCount@0" () As Int32
    Public Declare Function P13_DspBioRd Lib "P13W32.DLL" Alias "_P13_DspBioRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_DspIntfClear Lib "P13W32.DLL" Alias "_P13_DspIntfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DspIntfRead Lib "P13W32.DLL" Alias "_P13_DspIntfRead@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DspIntmClear Lib "P13W32.DLL" Alias "_P13_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DspIntmSet Lib "P13W32.DLL" Alias "_P13_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DspXfClear Lib "P13W32.DLL" Alias "_P13_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_DspXfSet Lib "P13W32.DLL" Alias "_P13_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorIsTaggedBC Lib "P13W32.DLL" Alias "_P13_ErrorIsTaggedBC@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorIsTaggedRT Lib "P13W32.DLL" Alias "_P13_ErrorIsTaggedRT@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorResponse Lib "P13W32.DLL" Alias "_P13_ErrorResponse@8" (ByVal responseval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_ErrorSync Lib "P13W32.DLL" Alias "_P13_ErrorSync@8" (ByVal value As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_ErrorTimeout Lib "P13W32.DLL" Alias "_P13_ErrorTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ExtDinRd Lib "P13W32.DLL" Alias "_P13_ExtDinRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_ExtDinWr Lib "P13W32.DLL" Alias "_P13_ExtDinWr@8" (ByVal dinval As Int32, ByVal handleval As UInt32)
    Public Declare Function P13_ExtDoutRd Lib "P13W32.DLL" Alias "_P13_ExtDoutRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P13_ExtDoutWr Lib "P13W32.DLL" Alias "_P13_ExtDoutWr@8" (ByVal doutval As Int32, ByVal handleval As UInt32)
    Public Declare Sub P13_FileClose Lib "P13W32.DLL" Alias "_P13_FileClose@4" (ByVal handle As IntPtr)
    Public Declare Function P13_FileErr Lib "P13W32.DLL" Alias "_P13_FileErr@0" () As Int32
    Public Declare Sub P13_FileErrClr Lib "P13W32.DLL" Alias "_P13_FileErrClr@0" ()
    Public Declare Sub P13_FileErrSet Lib "P13W32.DLL" Alias "_P13_FileErrSet@0" ()
    Public Declare Function P13_FileOpenRead Lib "P13W32.DLL" Alias "_P13_FileOpenRead@4" (ByRef filename As String) As UInt32
    Public Declare Function P13_FileOpenWrite Lib "P13W32.DLL" Alias "_P13_FileOpenWrite@4" (ByRef filename As String) As UInt32
    Public Declare Function P13_FileRead Lib "P13W32.DLL" Alias "_P13_FileRead@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function P13_FileSeek Lib "P13W32.DLL" Alias "_P13_FileSeek@8" (ByVal handle As IntPtr, ByVal offset As UInt32) As Int32
    Public Declare Function P13_FileTell Lib "P13W32.DLL" Alias "_P13_FileTell@4" (ByVal handle As IntPtr) As UInt32
    Public Declare Function P13_FileWrite Lib "P13W32.DLL" Alias "_P13_FileWrite@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function P13_GetHigh Lib "P13W32.DLL" Alias "_P13_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function P13_GetLow Lib "P13W32.DLL" Alias "_P13_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function P13_GlobalRdW Lib "P13W32.DLL" Alias "_P13_GlobalRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_GlobalWrW Lib "P13W32.DLL" Alias "_P13_GlobalWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_HandleDel Lib "P13W32.DLL" Alias "_P13_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_HandleGet Lib "P13W32.DLL" Alias "_P13_HandleGet@24" (ByRef memval As UInt32, ByRef sizval As UInt32, ByRef ioval As UInt32, ByRef irqval As UInt16, ByRef drqval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_HandleGetIo Lib "P13W32.DLL" Alias "_P13_HandleGetIo@4" (ByVal ioval As UInt16) As UInt32
    Public Declare Function P13_HandleGetMem Lib "P13W32.DLL" Alias "_P13_HandleGetMem@4" (ByVal memval As UInt32) As UInt32
    Public Declare Function P13_HandleIns Lib "P13W32.DLL" Alias "_P13_HandleIns@28" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function P13_HandleOkay Lib "P13W32.DLL" Alias "_P13_HandleOkay@4" (ByVal handleval As UInt32) As Int32
